--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-DATABASE_USER=root
-DATABASE_PASSWORD=123456
-DATABASE_POST=3306
+#database
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=123456
+DB_DATABASE=student
+
+# mail
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=
+MAIL_PASSWORD=
